examples/test/testpolicy388.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy388
  namespace: namespace325
spec:
  podSelector:
    matchLabels:
      key13: value13
      key39: value43
      key49: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value35
          key35: value45
          key39: value43
      podSelector:
        matchLabels:
          key21: value26
